tests/ui/consts/const-err4.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-err4.rs:9:21
   |
LL |     Boo = [unsafe { Foo { b: () }.a }; 4][3],
   |                     ^^^^^^^^^^^^^^^ using uninitialized data, but this operation requires initialized memory

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
